Ajustado chamadas do metodos de validação, antes do cadastramento pessoa